--- a/app/src/main/res/layout/fragment_tickets.xml
+++ b/app/src/main/res/layout/fragment_tickets.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical"
-        android:padding="5dp">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="220dp"
@@ -65,20 +64,73 @@
                             android:src="@drawable/search" />
 
                         <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:id="@+id/l2"
+                                android:layout_width="20dp"
+                                android:layout_height="50dp"
+                                android:layout_weight="1"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:id="@+id/plane"
+                                    android:layout_width="20dp"
+                                    android:layout_height="50dp"
+                                    android:layout_weight="1"
+                                    android:src="@drawable/img"
+                                    android:visibility="gone" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:id="@+id/l"
+                                android:layout_width="20dp"
+                                android:layout_height="50dp"
+                                android:layout_weight="1"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:id="@+id/imageView2"
+                                    android:layout_width="20dp"
+                                    android:layout_height="50dp"
+                                    android:src="@drawable/search"
+                                    android:visibility="gone" />
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/gray"
                             android:orientation="vertical">
 
-                            <EditText
-                                android:id="@+id/editWhereFrom"
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:background="@null"
-                                android:ems="10"
-                                android:hint="@string/where_from"
-                                android:inputType="text"
-                                android:padding="10dp" />
+                                android:layout_height="wrap_content">
+
+                                <EditText
+                                    android:id="@+id/editWhereFrom"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@null"
+                                    android:ems="10"
+                                    android:hint="@string/where_from"
+                                    android:inputType="text"
+                                    android:padding="10dp" />
+
+                                <ImageView
+                                    android:id="@+id/clearText1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_centerVertical="true"
+                                    android:padding="10dp"
+                                    android:src="@android:drawable/ic_menu_close_clear_cancel"
+                                    android:visibility="gone" />
+                            </RelativeLayout>
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -86,23 +138,53 @@
                                 android:layout_marginStart="10dp"
                                 android:layout_marginEnd="10dp"
                                 android:background="@color/gray2"
-                                android:orientation="horizontal"></LinearLayout>
+                                android:orientation="horizontal" />
 
-                            <EditText
-                                android:id="@+id/editWhere"
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:background="@null"
-                                android:ems="10"
-                                android:hint="@string/where"
-                                android:inputType="text"
-                                android:padding="10dp" />
+                                android:layout_height="wrap_content">
+
+                                <EditText
+                                    android:id="@+id/editWhere"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@null"
+                                    android:ems="10"
+                                    android:hint="@string/where"
+                                    android:inputType="text"
+                                    android:padding="10dp" />
+
+                                <ImageView
+                                    android:id="@+id/clearText"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_centerVertical="true"
+                                    android:padding="10dp"
+                                    android:src="@android:drawable/ic_menu_close_clear_cancel"
+                                    android:visibility="gone" />
+                            </RelativeLayout>
+
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@color/black"
+            android:orientation="vertical">
+
+
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView2"
@@ -111,7 +193,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="10dp"
-            android:background="@color/black"
+            android:background="#242529"
             android:text="@string/music_from"
             android:textColor="@color/white"
             android:textSize="22sp"
@@ -136,13 +218,13 @@
 
         <Button
             android:id="@+id/button"
+            style="@style/ButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/ButtonStyle"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            app:cardCornerRadius="8dp"
-            android:text="@string/show_every_place" />
+            android:text="@string/show_every_place"
+            app:cardCornerRadius="8dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -162,7 +244,18 @@
                 android:textColor="@color/white"
                 android:textSize="22sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"></LinearLayout>
 
     </LinearLayout>
 
