--- a/app/src/main/res/layout/fragment_tickets.xml
+++ b/app/src/main/res/layout/fragment_tickets.xml
@@ -37,6 +37,7 @@
             app:cardCornerRadius="8dp">
 
             <LinearLayout
+                android:id="@+id/write"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
