--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black">
+    android:background="@color/black"
+    app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,10 +16,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corner"
-            tools:layout_editor_absoluteY="83dp">
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="91dp">
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/Istambul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
@@ -40,13 +42,13 @@
                 tools:layout_editor_absoluteY="56dp"></LinearLayout>
 
             <ImageView
-                android:id="@+id/imageView7"
+                android:id="@+id/Sochi"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
-                app:layout_constraintEnd_toEndOf="@+id/imageView6"
-                app:layout_constraintStart_toStartOf="@+id/imageView6"
-                app:layout_constraintTop_toBottomOf="@+id/imageView6"
+                app:layout_constraintEnd_toEndOf="@+id/Istambul"
+                app:layout_constraintStart_toStartOf="@+id/Istambul"
+                app:layout_constraintTop_toBottomOf="@+id/Istambul"
                 app:srcCompat="@drawable/img_10" />
 
             <LinearLayout
@@ -62,15 +64,15 @@
                 tools:layout_editor_absoluteY="106dp"></LinearLayout>
 
             <ImageView
-                android:id="@+id/imageView8"
+                android:id="@+id/Phuket"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/imageView7"
-                app:layout_constraintStart_toStartOf="@+id/imageView7"
-                app:layout_constraintTop_toBottomOf="@+id/imageView7"
+                app:layout_constraintEnd_toEndOf="@+id/Sochi"
+                app:layout_constraintStart_toStartOf="@+id/Sochi"
+                app:layout_constraintTop_toBottomOf="@+id/Sochi"
                 app:srcCompat="@drawable/img_11" />
 
             <LinearLayout
@@ -95,7 +97,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/textView6"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/textView6"
-                app:layout_constraintTop_toTopOf="@+id/imageView8" />
+                app:layout_constraintTop_toTopOf="@+id/Phuket" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -103,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/away"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+                app:layout_constraintBottom_toBottomOf="@+id/Istambul"
                 app:layout_constraintEnd_toEndOf="@+id/textView3"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/textView3" />
@@ -116,8 +118,8 @@
                 android:text="@string/Istambyl"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/imageView6"
-                app:layout_constraintTop_toTopOf="@+id/imageView6" />
+                app:layout_constraintStart_toEndOf="@+id/Istambul"
+                app:layout_constraintTop_toTopOf="@+id/Istambul" />
 
             <TextView
                 android:id="@+id/textView9"
@@ -129,7 +131,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/textView2"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
-                app:layout_constraintTop_toTopOf="@+id/imageView7" />
+                app:layout_constraintTop_toTopOf="@+id/Sochi" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -137,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/away"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
+                app:layout_constraintBottom_toBottomOf="@+id/Phuket"
                 app:layout_constraintEnd_toEndOf="@+id/textView1"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/textView1" />
@@ -148,7 +150,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/away"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+                app:layout_constraintBottom_toBottomOf="@+id/Sochi"
                 app:layout_constraintEnd_toEndOf="@+id/textView9"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/textView9" />
@@ -157,8 +159,8 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="410dp"
+            android:layout_height="91dp"
             android:background="#242529"
             android:gravity="center"
             android:orientation="horizontal"
@@ -174,7 +176,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/hardWay"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center"
@@ -204,7 +206,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView22"
+                    android:id="@+id/where_go"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center"
@@ -215,7 +217,7 @@
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="38dp"
                     android:ellipsize="end"
                     android:gravity="center"
                     android:maxLines="2"
@@ -237,7 +239,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/holidays"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center"
@@ -248,7 +250,7 @@
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="37dp"
                     android:gravity="center"
                     android:text="@string/holidays"
                     android:textColor="@color/white" />
@@ -266,7 +268,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/hot_tickets"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center"
@@ -277,7 +279,7 @@
                 <TextView
                     android:id="@+id/textView7"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="36dp"
                     android:gravity="center"
                     android:text="@string/hot_tickets"
                     android:textColor="@color/white" />
