--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -176,20 +176,22 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp">
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp">
 
 
             <FrameLayout
                 android:id="@+id/frameLayout4"
-                android:layout_width="130dp"
+                android:layout_width="100dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
                 android:background="@drawable/rounded_corner"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/frameLayout5"
                 app:layout_constraintStart_toEndOf="@+id/frameLayout2"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="MissingConstraints">
@@ -205,18 +207,62 @@
                         android:layout_width="37dp"
                         android:layout_height="29dp"
                         android:layout_gravity="start"
-                        android:layout_z="2"
                         android:background="@drawable/rounded_corner"
                         android:contentDescription="@string/description"
                         android:scaleType="fitCenter"
-                        android:src="@drawable/img_13"
-                        app:srcCompat="@drawable/img_13" />
+                        android:src="@drawable/person"
+                        app:srcCompat="@drawable/person" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="Обратно" />
+                        android:text="1, эконом"
+                        android:textColor="@color/white"
+                        android:textSize="10sp" />
+
+                </LinearLayout>
+
+
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/frameLayout5"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="2dp"
+                android:background="@drawable/rounded_corner"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/frameLayout4"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints">
+
+                <LinearLayout
+                    android:layout_width="112dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/imageButton2"
+                        android:layout_width="29dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:background="@drawable/rounded_corner"
+                        android:contentDescription="@string/description"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/img_14"
+                        app:srcCompat="@drawable/img_14" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="Фильтр"
+                        android:textColor="@color/white"
+                        android:textSize="10sp" />
 
                 </LinearLayout>
 
@@ -225,9 +271,9 @@
 
             <FrameLayout
                 android:id="@+id/frameLayout2"
-                android:layout_width="130dp"
+                android:layout_width="100dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="2dp"
                 android:layout_marginEnd="5dp"
                 android:background="@drawable/rounded_corner"
                 android:orientation="horizontal"
@@ -243,23 +289,13 @@
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
-                    <ImageButton
-                        android:id="@+id/imageButton5"
-                        android:layout_width="37dp"
-                        android:layout_height="29dp"
-                        android:layout_gravity="start"
-                        android:layout_z="2"
-                        android:background="@drawable/rounded_corner"
-                        android:contentDescription="@string/description"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/img_13"
-                        app:srcCompat="@drawable/img_13" />
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="Обратно" />
+                        android:text="24 фев , суб"
+                        android:textColor="@color/white"
+                        android:textSize="10sp" />
 
                 </LinearLayout>
 
@@ -268,10 +304,9 @@
 
             <FrameLayout
                 android:id="@+id/frameLayout1"
-                android:layout_width="130dp"
+                android:layout_width="100dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="2dp"
                 android:background="@drawable/rounded_corner"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -288,10 +323,9 @@
 
                     <ImageButton
                         android:id="@+id/imageButton4"
-                        android:layout_width="37dp"
+                        android:layout_width="30dp"
                         android:layout_height="29dp"
                         android:layout_gravity="start"
-                        android:layout_z="2"
                         android:background="@drawable/rounded_corner"
                         android:contentDescription="@string/description"
                         android:scaleType="fitCenter"
@@ -302,7 +336,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="Обратно" />
+                        android:text="Обратно"
+                        android:textColor="@color/white"
+                        android:textSize="10sp" />
 
                 </LinearLayout>
 
@@ -312,16 +348,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
-            android:id="@+id/button"
-            style="@style/ButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:text="@string/show_every_place"
-            app:cardCornerRadius="8dp" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -330,27 +356,155 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="400dp"
-                android:layout_height="400dp"
+                android:layout_height="300dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
                 android:foregroundGravity="center"
-                app:cardBackgroundColor="@color/black"
-                app:cardCornerRadius="8dp" />
+                app:cardBackgroundColor="@color/litle_gray"
+                app:cardCornerRadius="8dp">
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    >
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
+                        android:text="Прямые рельсы"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                        <LinearLayout
+                            android:layout_width="50dp"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:gravity="center">
+
+                            <ImageView
+                                android:paddingTop="20dp"
+                                android:id="@+id/imageView5"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/red_circle" />
+
+                            <ImageView
+                                android:paddingTop="20dp"
+                                android:id="@+id/imageView6"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/blue_circle" />
+
+                            <ImageView
+                                android:paddingTop="20dp"
+                                android:id="@+id/imageView7"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/white_cercle" />
+                        </LinearLayout>
+
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="200dp">
+
+                        </FrameLayout>
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/button2"
+                        style="@style/ButtonStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="Показать все"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        android:textColor="@android:color/holo_blue_dark"
+                        app:cardCornerRadius="8dp" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
                 android:layout_marginEnd="10dp"
-                android:background="@color/black"
-                android:text="@string/your_first_time"
-                android:textColor="@color/white"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+                android:text="@string/show_every_place"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                app:cardCornerRadius="8dp"
+                />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:foregroundGravity="center"
+                app:cardBackgroundColor="@color/litle_gray"
+                app:cardCornerRadius="8dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:src="@drawable/img_15"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:text="Подписка на цену"
+                        android:textColor="@color/white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/imageView4"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Switch
+                        android:id="@+id/switch1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="15dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.888"
+                        app:layout_constraintStart_toEndOf="@+id/textView13"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.561" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+
+
+
 
         </LinearLayout>
 
