--- a/app/src/main/res/layout/fragment_all_tickets.xml
+++ b/app/src/main/res/layout/fragment_all_tickets.xml
@@ -36,7 +36,7 @@
                     android:text="TextView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/imageView3"
+                    app:layout_constraintStart_toEndOf="@+id/im_back"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
@@ -51,7 +51,7 @@
                     app:layout_constraintStart_toStartOf="@+id/textView12" />
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/im_back"
                     android:layout_width="34dp"
                     android:layout_height="33dp"
                     android:src="@drawable/img_16"
