--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -47,10 +47,11 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/im_back"
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/search" />
+                            android:src="@drawable/img_19" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -121,7 +122,7 @@
                                     android:visibility="gone" />
 
                                 <ImageView
-                                    android:id="@+id/imageView"
+                                    android:id="@+id/change"
                                     android:layout_width="25dp"
                                     android:layout_height="25dp"
                                     android:layout_alignParentTop="true"
