--- a/app/src/main/res/layout/fragment_tickets.xml
+++ b/app/src/main/res/layout/fragment_tickets.xml
@@ -59,8 +59,9 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/searchTickets"
                             android:layout_width="25dp"
-                            android:layout_height="25dp"
+                            android:layout_height="15dp"
                             android:scaleType="centerCrop"
                             android:src="@drawable/search" />
 
