--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -291,6 +291,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/dateToday"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
