--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -318,13 +318,14 @@
                 tools:ignore="MissingConstraints">
 
                 <LinearLayout
+                    android:id="@+id/addDate1"
                     android:layout_width="112dp"
                     android:layout_height="match_parent"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <ImageButton
-                        android:id="@+id/imageButton4"
+                        android:id="@+id/addDate"
                         android:layout_width="30dp"
                         android:layout_height="29dp"
                         android:layout_gravity="start"
@@ -335,6 +336,7 @@
                         app:srcCompat="@drawable/img_13" />
 
                     <TextView
+                        android:id="@+id/dateView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
