исправляю на другое.

--- a/app/src/main/res/layout/fragment_all_tickets.xml
+++ b/app/src/main/res/layout/fragment_all_tickets.xml
@@ -84,6 +84,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/recycler_view_second"/>
                 </FrameLayout>
 
             </androidx.cardview.widget.CardView>
