--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -433,11 +433,12 @@
                                 android:src="@drawable/white_cercle" />
                         </LinearLayout>
 
-                        <FrameLayout
+                        <androidx.recyclerview.widget.RecyclerView
                             android:layout_width="match_parent"
-                            android:layout_height="200dp">
+                            android:layout_height="200dp"
+                            android:id="@+id/recycler_view"/>
 
-                        </FrameLayout>
+
 
                     </LinearLayout>
 
