--- a/app/src/main/res/layout/right_flights_item.xml
+++ b/app/src/main/res/layout/right_flights_item.xml
@@ -35,7 +35,7 @@
                 android:gravity="center_vertical">
 
                 <TextView
-                    android:id="@+id/tvName"
+                    android:id="@+id/tvTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/black"
@@ -46,7 +46,7 @@
                     android:layout_weight="0"/>
 
                 <TextView
-                    android:id="@+id/tvPrice"
+                    android:id="@+id/tvPriceFlights"
                     android:layout_marginStart="250dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -56,7 +56,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tvTown"
+                android:id="@+id/tvTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/black"
