2 3 загружаються надо чтоб 1 еще заного загружался

--- a/app/src/main/res/layout/all_tikets_item.xml
+++ b/app/src/main/res/layout/all_tikets_item.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/titleDividerNoCustom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -35,15 +35,15 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView16"
+                android:id="@+id/valueTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="TextView"
-                app:layout_constraintEnd_toEndOf="@+id/title"
+                app:layout_constraintEnd_toEndOf="@+id/titleDividerNoCustom"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/title"
-                app:layout_constraintTop_toBottomOf="@+id/title" />
+                app:layout_constraintStart_toStartOf="@+id/titleDividerNoCustom"
+                app:layout_constraintTop_toBottomOf="@+id/titleDividerNoCustom" />
 
             <TextView
                 android:id="@+id/textView17"
@@ -51,10 +51,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="TextView"
-                app:layout_constraintEnd_toEndOf="@+id/textView16"
+                app:layout_constraintEnd_toEndOf="@+id/valueTextView"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/textView16"
-                app:layout_constraintTop_toBottomOf="@+id/textView16" />
+                app:layout_constraintStart_toStartOf="@+id/valueTextView"
+                app:layout_constraintTop_toBottomOf="@+id/valueTextView" />
 
             <TextView
                 android:id="@+id/textView18"
@@ -62,15 +62,16 @@
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView16"
-                tools:layout_editor_absoluteY="51dp" />
+                app:layout_constraintStart_toEndOf="@+id/valueTextView"
+                tools:layout_editor_absoluteY="51dp"
+                tools:ignore="MissingConstraints" />
 
             <ImageView
                 android:id="@+id/imageView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/textView16"
+                app:layout_constraintEnd_toStartOf="@+id/valueTextView"
                 app:layout_constraintHorizontal_bias="0.75"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
